# DAV_HU_AS

./: .gitignore  .lefthook.yml  README.md  config.toml  hello.py  main.py  pyproject.toml  test
notebooks/: Ass-04-who-to-who.ipynb  Ass-04.ipynb  PlayerRoles.json  Week6.2 position.ipynb  Week6.2 wife.ipynb  Week6.2.ipynb  as-01-comparing-categories copy.ipynb  as-01-comparing-categories.ipynb  as-ass03-distributions.ipynb  assignment-week6.ipynb  assignments_other file.ipynb  outlier_berichten.csv
report/: Eindverslag.docx
src/: main copy.py  main.py
src/Module/: main.py
src/staging/: dataloader.py
src/visualising/: bar_chart.py  time_series.py
src/wa_analysis/: bar_chart.py  bar_main.py  baseplot.py  colored_bar_chart.py  config.py  dataloader.py  dataprocessor.py  main.py  main_processor.py  playerdataloader.py  role_merger.py  settings.py  time_series.py  try_1_bar.py
src/wa_analysis/data_analysis/: calculation.py  model.py
src/wa_analysis/data_loading/: config.py  dataloader.py  merger.py  processor.py  reactions.py
src/wa_analysis/settings/: baseplot.py  colored_bar_chart.py  logger.py  settings.py
src/wa_analysis/visualisation/: bar_chart.py  barchart.py  clustering.py  comparing_categories.py  distribution.py  relationships.py  time_series.py
