[project]
name = "dav-hu-as"
version = "0.1.0"
description = "This is the code for the assignments of Adriaan Stolk for the course Data Analysis and Visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastparquet>=2024.11.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pip>=25.0.1",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "ruff>=0.9.9",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]
