[project]
name = "dav-hu-as"
version = "0.1.0"
description = "This is the code for the assignments of Adriaan Stolk for the course Data Analysis and Visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "path>=17.1.0",
    "pathlib>=1.0.1",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "jupyter>=1.1.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wa_analysis"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N"]

[project.scripts]
mymodule = "src.main:run_project"
